# ChatBot_Manuelita

./: .gitignore  Makefile  README.md  agent_service.py  app.py  chat_memory.py  config.py  db.py  env_utils.py  ingesta.py  knowledge_base_manuelita.jsonl  langsmith_config.py  llm_factory.py  main.py  mainv1.py  mainv2.py  mainv3.py  mainv4.py  mainv5.py  procesamiento.py  pyproject.toml  questions.json  rag_client.py  settings.py  structured_data.json  structured_tool.py  tools.py  ui_components.py
context/: Resultado.md
