[project]
name = "TALLER_1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain-text-splitters>=1.1.2",
    "markdownify>=1.2.2",
    "ollama>=0.6.1",
    "pypdf2>=3.0.1",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
]
