[project]
name = "TALLER_1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "markdownify>=1.2.2",
    "ollama>=0.6.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.5.0",
    "streamlit>=1.56.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
